--- a/PrinterServer/src/main/resources/application.yml
+++ b/PrinterServer/src/main/resources/application.yml
@@ -17,3 +17,9 @@ spring:
     prefix: classpath:/templates/
     cache: false
     encoding: UTF-8
+  servlet:
+    multipart:
+      max-file-size: 20MB
+
+printer:
+  topic: test_001
